# convex-hull-rs

./: AGENT.md  Cargo.toml  README.md
src/: chan.rs  graham.rs  jarvis.rs  lib.rs  point.rs  quickhull.rs
