[package]
name = "convex-hull-rs"
version = "0.1.0"
edition = "2021"
description = "Convex hull algorithms in pure Rust: Graham scan, Jarvis march, Quickhull, Chan's algorithm"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/convex-hull-rs"
keywords = ["convex-hull", "geometry", "graham-scan", "quickhull", "algorithm"]
categories = ["algorithms", "data-structures", "mathematics", "science"]
authors = ["SuperInstance"]
readme = "README.md"

[dependencies]
